--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -1,8 +1,17 @@
 ---
-name: Hello world
+name: 1. Quick Start
 route: /
+order: 1
 ---
 
-# Hello world
+# Uniui
 
-Hello, I'm a mdx file
+Uniui is a React Typescript UI library currently in beta.
+
+## Installation
+
+To install Uniui, simply run the following in the root directory of your react project:
+
+```
+    $ npm i uniui
+```
