--- a/docs/components/button.mdx
+++ b/docs/components/button.mdx
@@ -5,10 +5,12 @@ menu: 2. Components
 ---
 
 import { Button } from "../../src";
-import { Playground } from 'docz';
+import { Playground, Props } from 'docz';
 
 
 # Button Component
+
+<Props of={Button} />
 
 <Playground>
 
