--- a/docs/components/button.mdx
+++ b/docs/components/button.mdx
@@ -4,14 +4,12 @@ route: /components/button
 menu: 2. Components
 ---
 
-import { Button } from "../../src";
-import { Playground, Props } from 'docz';
-
+import { Button, Themer, Themes } from "../../src";
+import { Playground, Props } from "docz";
 
 # Button Component
 
 <Props of={Button} />
-
 <Playground>
 
     <Button>Button</Button>
