--- a/docs/components/button.mdx
+++ b/docs/components/button.mdx
@@ -4,12 +4,16 @@ route: /components/button
 menu: 2. Components
 ---
 
-import { Button, Themer, Themes } from "../../src";
-import { Playground, Props } from "docz";
+import Button from "../../src/components/Button";
+import { Playground, Props } from 'docz';
+
 
 # Button Component
 
 <Props of={Button} />
+
+## Basic Usage
+
 <Playground>
 
     <Button>Button</Button>
