--- a/docs/components/selection.mdx
+++ b/docs/components/selection.mdx
@@ -12,7 +12,7 @@ import { Playground, Props } from 'docz';
 
 <Props of={Selection} />
 
-## Basic Usage
+## Basic Radio Usage
 
 <Playground>
 
@@ -20,6 +20,30 @@ import { Playground, Props } from 'docz';
         <Selection type="radio" label="Radio button 1" />
         <Selection type="radio" label="Radio button 2" />
         <Selection type="radio" label="Radio button 3" />
+    </SelectionGroup>
+
+</Playground>
+
+## Basic Checkbox Usage
+
+<Playground>
+
+    <SelectionGroup>
+        <Selection type="checkbox" label="Checkbox 1" />
+        <Selection type="checkbox" label="Checkbox 2" />
+        <Selection type="checkbox" label="Checkbox 3" />
+    </SelectionGroup>
+
+</Playground>
+
+## Basic Switch Usage
+
+<Playground>
+
+    <SelectionGroup>
+        <Selection type="switch" label="Switch 1" />
+        <Selection type="switch" label="Switch 2" />
+        <Selection type="switch" label="Switch 3" />
     </SelectionGroup>
 
 </Playground>
