Added more docs

--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -15,3 +15,20 @@ To install Uniui, simply run the following in the root directory of your react p
 ```
     $ npm i uniui
 ```
+
+## Usage
+
+You can import the entire library via:
+
+```ts
+    import Uniui from "uniui";
+```
+
+
+Or individually:
+
+```ts
+    import { Button, Selection } from "uniui";
+```
+
+See the [Component API docs](components/button) for further reference
