--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -4,7 +4,7 @@ route: /
 order: 1
 ---
 
-# Uniui
+# [![Uniui](../img/uniui.svg?sanitize=true)](http://uniui.moynihan.io)
 
 Uniui is a React Typescript UI library currently in beta.
 
