Added font to docz

--- a/docs/components/button.mdx
+++ b/docs/components/button.mdx
@@ -4,6 +4,7 @@ route: /components/button
 menu: 2. Components
 ---
 
+import "../global.css";
 import { Button } from "../../src/";
 import { Playground, Props } from 'docz';
 
