--- a/docs/components/selection.mdx
+++ b/docs/components/selection.mdx
@@ -5,6 +5,7 @@ menu: 2. Components
 ---
 
 import { Selection, SelectionGroup } from "../../src";
+import "../global.css";
 import { Playground, Props } from 'docz';
 
 
