--- a/docs/components/textfield.mdx
+++ b/docs/components/textfield.mdx
@@ -4,6 +4,7 @@ route: /components/textfield
 menu: 2. Components
 ---
 
+import "../global.css";
 import { TextField } from "../../src/";
 import { Playground, Props } from 'docz';
 
