--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -4,6 +4,8 @@ route: /
 order: 1
 ---
 
+import "./global.css";
+
 # <img src="../img/uniui.svg" width="400" />
 
 Uniui is a React Typescript UI library currently in beta.
