--- a/docs/theme.mdx
+++ b/docs/theme.mdx
@@ -1,9 +1,9 @@
 ---
 name: 3. Theming
 route: /theming
-menu: 3. Theming
 ---
 
+import "./global.css";
 import { Button, Themer, Theme, Themes } from "../src/";
 import { lime } from "../src/theme";
 import { Playground, Props } from 'docz';
