Added props demo

--- a/docs/components/textfield.mdx
+++ b/docs/components/textfield.mdx
@@ -21,5 +21,18 @@ import { Playground, Props } from 'docz';
         value="Text"
         subtitle="TextField"
     />
+    <TextField 
+        value="1234"
+        subtitle="Phone Number"
+        type="number"
+    />
+    <TextField 
+        subtitle="Search"
+        type="search"
+    />
+    <TextField 
+        subtitle="Password"
+        type="password"
+    />
 
 </Playground>
