Styled selected option

--- a/docs/components/select.mdx
+++ b/docs/components/select.mdx
@@ -18,7 +18,7 @@ import { Playground, Props } from 'docz';
 <Playground>
 
     <SelectionGroup>
-        <Select options={[{name: "test", value: "test"}]} subtitle="Select 1" />
+        <Select options={[{name: "test", value: "test"},{name: "test2", value: "test2"}, {name: "test3", value: "test3"}]} subtitle="Select 1" />
         <Select options={[{name: "test", value: "test"}]} native={true} subtitle="Select 2" />
     </SelectionGroup>
 
