--- a/docs/components/select.mdx
+++ b/docs/components/select.mdx
@@ -20,6 +20,7 @@ import { Playground, Props } from 'docz';
     <SelectionGroup>
         <Select options={[{name: "test", value: "test"},{name: "test2", value: "test2"}, {name: "test3", value: "test3"}]} subtitle="Select 1" />
         <Select options={[{name: "test", value: "test"}]} native={true} subtitle="Select 2" />
+        <Select options={[{name: "Select 3", value: "test"},{name: "test2", value: "test2"}, {name: "test3", value: "test3"}]} emptyEntry={false} />
     </SelectionGroup>
 
 </Playground>
