--- a/docs/components/select.mdx
+++ b/docs/components/select.mdx
@@ -20,7 +20,18 @@ import { Playground, Props } from 'docz';
     <SelectionGroup>
         <Select options={[{name: "test", value: "test"},{name: "test2", value: "test2"}, {name: "test3", value: "test3"}]} subtitle="Select 1" />
         <Select options={[{name: "test", value: "test"}]} native={true} subtitle="Select 2" />
-        <Select options={[{name: "Select 3", value: "test"},{name: "test2", value: "test2"}, {name: "test3", value: "test3"}]} emptyEntry={false} />
+        <Select options={[{name: "test", value: "test"},{name: "test2", value: "test2"}, {name: "test3", value: "test3"}]} emptyEntry={false} subtitle="Select 3"/>
+        <Select options={[
+            {name: "Select 4", value: "test"},
+            {name: "test2", value: "test2"}, 
+            {name: "test3", value: "test3"},
+            {name: "test4", value: "test4"},
+            {name: "test5", value: "test5"},
+            {name: "test6", value: "test6"},
+            {name: "test7", value: "test7"},
+            {name: "test8", value: "test8"},
+            {name: "test9", value: "test9"},
+        ]} emptyEntry={false} />
     </SelectionGroup>
 
 </Playground>
