Fixed docz props

--- a/docs/components/select.mdx
+++ b/docs/components/select.mdx
@@ -4,7 +4,8 @@ route: /components/select
 menu: 2. Components
 ---
 
-import { Select, SelectionGroup } from "../../src";
+import {  SelectionGroup } from "../../src";
+import Select from "../../src/components/Select";
 import "../global.css";
 import { Playground, Props } from 'docz';
 
