--- a/docs/components/selection.mdx
+++ b/docs/components/selection.mdx
@@ -4,7 +4,8 @@ route: /components/selection
 menu: 2. Components
 ---
 
-import { Selection, SelectionGroup } from "../../src";
+import {  SelectionGroup } from "../../src";
+import Selection from "../../src/components/Selection";
 import "../global.css";
 import { Playground, Props } from 'docz';
 
