--- a/docs/components/textfield.mdx
+++ b/docs/components/textfield.mdx
@@ -5,7 +5,7 @@ menu: 2. Components
 ---
 
 import "../global.css";
-import { TextField } from "../../src/";
+import  TextField  from "../../src/components/TextField";
 import { Playground, Props } from 'docz';
 
 
