Added NavBar Button Check

--- a/docs/containers/navbar.mdx
+++ b/docs/containers/navbar.mdx
@@ -1,6 +1,6 @@
 ---
-name: Box
-route: /containers/box
+name: NavBar
+route: /containers/navbar
 menu: 4. Containers
 ---
 
@@ -15,3 +15,9 @@ import { Playground, Props } from "docz";
 <Props of={NavBar} />
 
 ## Basic Usage
+<Playground>
+    <NavBar>
+        <Button type="borderless">Yo</Button>
+        <Button>Yo</Button>
+    </NavBar>
+</Playground>
