Added navbar style

--- a/docs/containers/navbar.mdx
+++ b/docs/containers/navbar.mdx
@@ -15,9 +15,11 @@ import { Playground, Props } from "docz";
 <Props of={NavBar} />
 
 ## Basic Usage
+
 <Playground>
-    <NavBar>
-        <Button type="borderless">Yo</Button>
-        <Button>Yo</Button>
-    </NavBar>
+  <NavBar>
+    <h1>Test</h1>
+    <Button type="borderless">Yo</Button>
+    <Button type="borderless">Bro</Button>
+  </NavBar>
 </Playground>
