--- a/docs/containers/navbar.mdx
+++ b/docs/containers/navbar.mdx
@@ -17,9 +17,11 @@ import { Playground, Props } from "docz";
 ## Basic Usage
 
 <Playground>
-  <NavBar>
-    <h1>Test</h1>
-    <Button type="borderless">Yo</Button>
-    <Button type="borderless">Bro</Button>
-  </NavBar>
+  <div style={{height:"6em"}}>
+    <NavBar>
+      <h1>Test</h1>
+      <Button type="borderless">Yo</Button>
+      <Button type="borderless">Bro</Button>
+    </NavBar>
+  </div>
 </Playground>
