--- a/docs/containers/navbar.mdx
+++ b/docs/containers/navbar.mdx
@@ -20,8 +20,8 @@ import { Playground, Props } from "docz";
   <div style={{height:"6em"}}>
     <NavBar>
       <h1>Test</h1>
-      <Button type="borderless">Yo</Button>
-      <Button type="borderless">Bro</Button>
+      <Button type="borderless">Home</Button>
+      <Button type="borderless">About</Button>
     </NavBar>
   </div>
 </Playground>
