--- a/docs/containers/navbar.mdx
+++ b/docs/containers/navbar.mdx
@@ -17,11 +17,18 @@ import { Playground, Props } from "docz";
 ## Basic Usage
 
 <Playground>
-  <div style={{height:"6em"}}>
-    <NavBar>
+  <div style={{height:"10em"}}>
+    <NavBar position="relative">
       <h1>Test</h1>
       <Button type="borderless">Home</Button>
       <Button type="borderless">About</Button>
     </NavBar>
+    <div style={{height: "7em", overflow: "scroll"}}>
+      <h1>Line</h1>
+      <h1>Line</h1>
+      <h1>Line</h1>
+      <h1>Line</h1>
+      <h1>Line</h1>
+    </div>
   </div>
 </Playground>
