--- a/docs/containers/navbar.mdx
+++ b/docs/containers/navbar.mdx
@@ -17,7 +17,7 @@ import { Playground, Props } from "docz";
 ## Basic Usage
 
 <Playground>
-  <div style={{height:"10em"}}>
+  <div>
     <NavBar position="relative">
       <h1>Test</h1>
       <Button type="borderless">Home</Button>
