Fixed Comment in code review

--- a/docs/containers/navbar.mdx
+++ b/docs/containers/navbar.mdx
@@ -17,7 +17,7 @@ import { Playground, Props } from "docz";
 ## Basic Usage
 
 <Playground>
-  <div>
+  <div style={{height:"10em"}}>
     <NavBar position="relative">
       <h1>Test</h1>
       <Button type="borderless">Home</Button>
