--- a/docs/components/selection.mdx
+++ b/docs/components/selection.mdx
@@ -12,7 +12,51 @@ import { Playground, Props } from 'docz';
 
 # Selection Component
 
-<Props of={Selection} />
+The `Selection` Component comes with all of the HTML Attribute props for a `HTMLInputElement` as well as:
+
+<PropsTable
+    props={
+    {
+    "type": {
+      "type": {
+        "name": `"radio" | "checkbox" | "switch"`
+      },
+      "required": true,
+      "description": `
+Type of the selection.
+Radio can only be selected one at a time
+Checkbox and switch are skinned checkboxes
+      `
+    },
+    "checked": {
+      "type": {
+        "name": `boolean`
+      },
+      "required": false,
+      "description": `
+Default state of the input
+      `
+    },
+    "label": {
+      "type": {
+        "name": `string`
+      },
+      "required": false,
+      "description": `
+Optional label next to input
+      `
+    },
+    "onChangeValue": {
+      "type": {
+        "name": `(state: boolean) => void`
+      },
+      "required": false,
+      "description": `
+Callback function providing changed state
+      `
+    }
+    }
+} />
 
 ## Basic Radio Usage
 
