--- a/docs/containers/box.mdx
+++ b/docs/containers/box.mdx
@@ -15,11 +15,11 @@ import PropsTable from "react-docgen-props-table";
 
 <PropsTable
   props={{
-    position: {
-      layout: {
-        name: `"horizontal" | "vertical"`
+    "layout": {
+      "type": {
+        "name": `"horizontal" | "vertical"`
       },
-      required: true
+      "required": true
     }
   }}
 />
